# workflow-canvas

./: .gitignore  .readthedocs.yaml  AI_USAGE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  server.py
static/: index.html
static/css/: style.css
static/js/: app.js  history.js  nodes.js
tests/: conftest.py  test_archive_status_endpoints.py  test_archive_url_normalization.py  test_cache.py  test_cache_file_dedup_race.py  test_cache_key_sensitivity.py  test_cancelled_rows.py  test_cancelled_rows_integration.py  test_canvas_cancel.py  test_canvas_compile_ts.py  test_canvas_lineage_pipeline_endpoint.py  test_canvas_logs.py  test_canvas_pipeline_document_endpoint.py  test_canvas_registry_endpoints.py  test_canvas_run.py  test_capture_env_content_container_lookup.py  test_container_command_construction.py  test_container_only_enforcement.py  test_content_hash.py  test_content_validation.py  test_contract_extra_outputs.py  test_deferred_archiving.py  test_demo_canvas.py  test_demo_guard.py  test_demo_preflight.py  test_dev_loop_command_construction.py  test_dev_loop_jupyter_port_autopick.py  test_docker_build_sets_buildkit_env.py  test_dockerfile_generation.py  test_doctor_exit_code.py  test_dvc_sample_registration.py  test_enrich_pipeline_slot_types.py  test_env_fingerprint.py  test_env_fingerprint_precompute.py  test_env_isolation.py  test_env_packages.py  test_envs.py  test_exec_method.py  test_export_cli.py  test_fan_in.py  (+45 more)
tests/e2e/: __init__.py  conftest.py  test_canvas_endpoints.py  test_future_stories.py  test_l2_sirna_pipeline.py  test_pipeline_failures.py  test_pipeline_system_nodes.py  test_pipeline_wiring.py  test_project_setup.py
tests/fixtures/: Dockerfile.client  Dockerfile.minimal  conftest.py
tests/fixtures/pipelines/: pipeline_asymmetric.json  pipeline_cartesian.json  pipeline_duplicate_methods.json  pipeline_fan_in.json  pipeline_fan_out_variants.json  pipeline_l2_sirna.json  pipeline_multi_module.json  pipeline_multi_output.json  pipeline_simple.json  (+3 more)
tests/integration/: conftest.py  test_cache_provenance.py  test_containerized_pipeline_runs.py  test_containerized_step_runs.py  test_demo_integration.py  test_imaging_pipeline_provenance.py  test_method_through_container.py  test_method_tier_2.py  test_user_env_image_digest_invariance.py  test_user_env_image_structure.py
tests/js_harness/: compile_harness.mjs
userdocs/: requirements.txt
userdocs/_sphinx/: conf.py  group_index.py
userdocs/guide/: .render-manifest.json  canvas.md  getting-started.md  index.md  inspecting-results.md  project-anatomy.md  registration.md  writing-methods.md
userdocs/reference/: .render-manifest.json  cli-reference.md  index.md
wfc/: AGENTS.md  SYSTEM_OVERVIEW_v2.html  __init__.py  __main__.py  ast_scanner.py  cli.py  container_runner.py  contracts.py  database.py  demo_generate.py  dev_loop.py  docker_runner.py  env_introspect.py  env_packages.py  envs.py  init.py  lineage.py  manifest.py  method.py  method_ast.py  models.py  node_outputs.py  preflight.py  provenance.py  register.py  remote.py  reserved.py  seed.py  snakemake_gen.py  version.py  wfc_context.py
wfc-client/: LICENSE  README.md  pyproject.toml
wfc-client/tests/: test_context.py  test_main.py
wfc-client/wfc_client/: __init__.py  context.py  decorator.py  errors.py  main.py
wfc/agent_docs/: workflows.md
wfc/canvas/: lineage_synthesizer.py  server.py  wfc_provider.py
wfc/demo/: __init__.py  remove.py  scaffold.py
wfc/dockerfiles/: __init__.py  bases.py  byo.py  conda.py  inherit.py  pixi.py
(+226 files in other folders)
