[tool.poetry]
name = "workflow-canvas"
version = "0.3.0"
description = "Workflow Canvas — DB + wfc CLI + Snakemake execution"
authors = ["Dante <dantepoe@noboundssolutions.com>"]
license = "BSD-3-Clause"
packages = [{include = "wfc"}]
include = [
  { path = "wfc/canvas/static/dist/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sqlmodel = ">=0.0.14"
pydantic = ">=2.0.0"
snakemake = ">=8.0"
pandas = ">=2.0"
numpy = ">=1.24"
pyarrow = ">=14.0"
axiom-annotations = "^0.1.0"
dvc = "^3.67.1"

[tool.poetry.group.dev.dependencies]
axiom-graph = {version = "^2.1.1", extras = ["viz", "js"]}
pytest = ">=9.0.2,<10"
pytest-html = ">=4.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
matplotlib = "^3.10.8"

[tool.poetry.group.api.dependencies]
fastapi = ">=0.110"
uvicorn = {version = ">=0.27", extras = ["standard"]}
psutil = ">=5.9"

[tool.poetry.group.docs.dependencies]
sphinx = ">=8.0,<9.0"
sphinx-rtd-theme = ">=2.0"
sphinx-design = ">=0.6"
sphinxcontrib-mermaid = ">=1.0"
myst-parser = "^5.1.0"

[tool.poetry.scripts]
workflow-canvas = "wfc.__main__:main"
wfc = "wfc.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests/e2e"]
markers = [
    "e2e: end-to-end feature specification tests",
    "slow: tests that invoke real subprocesses",
    "integration: marks tests as requiring Docker (deselect with -m 'not integration')",
]
addopts = [
    "--tb=short",
    "-m", "not slow and not integration",
]

# pytest-html report defaults (override with CLI flags)
# Run:  pytest tests/e2e/ --html=reports/e2e_dashboard.html --self-contained-html
